<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uis.Ticket.DetailTicketActivity">

    <ImageView
        android:id="@+id/imgEticket"
        android:layout_width="172dp"
        android:layout_height="198dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="SCAN HERE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgEticket" />

    <TextView
        android:id="@+id/lblTicketId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/ticket_id"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScan" />

    <TextView
        android:id="@+id/tvTicketId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="1"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblTicketId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblTicketId"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/customer"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/lblTicketId"
        app:layout_constraintTop_toBottomOf="@+id/lblTicketId" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nguyen Van A"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblCustomer"
        app:layout_constraintEnd_toEndOf="@+id/tvTicketId"
        app:layout_constraintTop_toTopOf="@+id/lblCustomer"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ha Noi - Ho Chi Minh"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblTrip"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="@+id/lblTrip"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/lblTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/trip"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/lblCustomer"
        app:layout_constraintTop_toBottomOf="@+id/lblCustomer" />

    <TextView
        android:id="@+id/lblDepartureDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Date:"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/lblTrip"
        app:layout_constraintTop_toBottomOf="@+id/lblTrip" />

    <TextView
        android:id="@+id/tvDepartureDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wednesday, Dec 6th 2023"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblDepartureDate"
        app:layout_constraintEnd_toEndOf="@+id/tvTrip"
        app:layout_constraintTop_toTopOf="@+id/lblDepartureDate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblDepartureTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/time"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/lblDepartureDate"
        app:layout_constraintTop_toBottomOf="@+id/lblDepartureDate" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="19:00"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblDepartureTime"
        app:layout_constraintEnd_toEndOf="@+id/tvDepartureDate"
        app:layout_constraintTop_toTopOf="@+id/lblDepartureTime" />

    <TextView
        android:id="@+id/lblPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/price"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/lblDepartureTime"
        app:layout_constraintTop_toBottomOf="@+id/lblDepartureTime" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="200,000 VND"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblPrice"
        app:layout_constraintEnd_toEndOf="@+id/tvTime"
        app:layout_constraintTop_toTopOf="@+id/lblPrice" />

    <TextView
        android:id="@+id/lblSeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textSize="17sp"
        android:text="@string/seat_number"
        app:layout_constraintStart_toStartOf="@+id/lblPrice"
        app:layout_constraintTop_toBottomOf="@+id/lblPrice" />

    <TextView
        android:id="@+id/tvSeatNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblSeat"
        app:layout_constraintEnd_toEndOf="@+id/tvPrice"
        app:layout_constraintTop_toTopOf="@+id/lblSeat" />
</androidx.constraintlayout.widget.ConstraintLayout>